# navidrome-toolbox

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  pyproject.toml
backend/app/routers/: files.py  health.py  youtube.py
backend/app/schemas/: files.py  youtube.py
backend/app/services/: file_service.py  youtube_service.py
docs/: Files_API.md  Youtube_API.md
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/files/: route.ts
frontend/app/api/files/[id]/: route.ts
frontend/app/api/files/thumbnail/: route.ts
frontend/app/api/health/: route.ts
frontend/app/metadata/: page.tsx
frontend/app/metadata/[id]/: page.tsx
frontend/app/youtube-downloader/: page.tsx
frontend/components/dashboard/: tools-grid.tsx
frontend/components/layout/: client-layout.tsx  health-status.tsx  page-transition.tsx  sidebar.tsx
frontend/components/metadata/: file-list.tsx  search-form.tsx
frontend/components/ui/: dialog.tsx  popover.tsx
frontend/components/youtube/: batch-download-progress.tsx  download-progress.tsx  format-selector.tsx  playlist-view.tsx  search-form.tsx  search-results.tsx
frontend/hooks/: use-batch-download.ts  use-files.ts  use-health-check.ts  use-playlist.ts  use-youtube-download.ts  use-youtube-search.ts
frontend/lib/: constants.ts  utils.ts
frontend/lib/api/: files.ts  health.ts  youtube.ts
frontend/types/: api.ts
(+5 files in other folders)
